First level of COUNT query as IN (#302)