@@ -232,7 +232,7 @@ class IntermediateSimplePropertyTest extends TestMappingRoot {
     final IntermediateSimpleProperty property = new IntermediateSimpleProperty(new JPADefaultEdmNameBuilder(PUNIT_NAME),
         jpaAttribute, helper.schema);
 
-    assertEquals(new Integer(1), property.getEdmItem().getMaxLength());
+    assertEquals(Integer.valueOf(1), property.getEdmItem().getMaxLength());
   }
 
   @Test
@@ -250,7 +250,7 @@ class IntermediateSimplePropertyTest extends TestMappingRoot {
     final IntermediateSimpleProperty property = new IntermediateSimpleProperty(new JPADefaultEdmNameBuilder(PUNIT_NAME),
         jpaAttribute, helper.schema);
 
-    assertEquals(new Integer(16), property.getEdmItem().getPrecision());
+    assertEquals(Integer.valueOf(16), property.getEdmItem().getPrecision());
   }
 
   @Test
@@ -258,7 +258,7 @@ class IntermediateSimplePropertyTest extends TestMappingRoot {
     final Attribute<?, ?> jpaAttribute = helper.getAttribute(helper.getEntityType(BusinessPartner.class), "customNum1");
     final IntermediateSimpleProperty property = new IntermediateSimpleProperty(new JPADefaultEdmNameBuilder(PUNIT_NAME),
         jpaAttribute, helper.schema);
-    assertEquals(new Integer(5), property.getEdmItem().getScale());
+    assertEquals(Integer.valueOf(5), property.getEdmItem().getScale());
   }
 
   @Test
@@ -268,7 +268,7 @@ class IntermediateSimplePropertyTest extends TestMappingRoot {
     final IntermediateSimpleProperty property = new IntermediateSimpleProperty(new JPADefaultEdmNameBuilder(PUNIT_NAME),
         jpaAttribute, helper.schema);
 
-    assertEquals(new Integer(2), property.getEdmItem().getPrecision());
+    assertEquals(Integer.valueOf(2), property.getEdmItem().getPrecision());
   }
 
   @Test
